--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "formidable": "^1.1.1",
     "jade": "~1.3.0",
     "morgan": "~1.0.0",
+    "python-shell": "^0.4.0",
     "static-favicon": "~1.0.0"
   }
 }
