--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "nodejs ./bin/www"
+    "start": "node ./bin/www.js"
   },
   "dependencies": {
     "body-parser": "~1.0.0",
@@ -15,6 +15,7 @@
     "jade": "~1.3.0",
     "morgan": "~1.0.0",
     "python-shell": "^0.4.0",
+    "request": "^2.79.0",
     "static-favicon": "~1.0.0"
   }
 }
